<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_space"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_marginHorizontal="@dimen/common_space"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars" />

    <TextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_space"
        android:layout_marginEnd="@dimen/common_space"
        android:contentDescription="@string/description_author_name"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_space"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/authorName"
        tools:text="@sample/posts.json/data/published" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:contentDescription="@string/menu"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_space"
        app:constraint_referenced_ids="avatar, published, menu" />

    <TextView
        android:id="@+id/context"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_space"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="@dimen/common_space"
        app:constraint_referenced_ids="context" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:barrierMargin="64dp"
        app:constraint_referenced_ids="context" />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="@dimen/common_space"
        android:layout_height="@dimen/common_space"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/heart"
        android:src="@drawable/heart_empty_24dp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier1" />

    <TextView
        android:id="@+id/liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/liked"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toEndOf="@id/heart"
        app:layout_constraintTop_toTopOf="@id/barrier1" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="@dimen/common_space"
        android:layout_height="@dimen/common_space"
        android:layout_marginStart="@dimen/common_space"
        android:contentDescription="@string/share"
        android:src="@drawable/share_24dp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toEndOf="@id/liked"
        app:layout_constraintTop_toTopOf="@id/barrier1" />

    <TextView
        android:id="@+id/shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/shared"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintStart_toEndOf="@id/share"
        app:layout_constraintTop_toTopOf="@id/barrier1" />

    <TextView
        android:id="@+id/looked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/looked"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrier1" />

    <ImageView
        android:id="@+id/eye"
        android:layout_width="@dimen/common_space"
        android:layout_height="@dimen/common_space"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/eye"
        android:src="@drawable/eye_24dp"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintEnd_toStartOf="@id/looked"
        app:layout_constraintTop_toTopOf="@id/barrier1" />

</androidx.constraintlayout.widget.ConstraintLayout>